Harden native telemetry evidence boundaries